--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,72 @@
-.h1 {
-    border: 3px solid;
-    border-radius: 10px;
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    background-color: aliceblue;
-}
+h1 {
+  color: white;
+  align-items: center;
+  padding: 3px;
+  background: #e9e9e9;
+  background: linear-gradient(90deg, #e9e9e9 0%, black 50%, #e9e9e9 100%);
+  background-size: auto; }
 
-div{
-    text-align: center;
-}
+h2 {
+  color: white;
+  align-items: center;
+  padding: 3px;
+  background: #e9e9e9;
+  background: linear-gradient(90deg, #e9e9e9 0%, black 50%, #e9e9e9 100%);
+  background-size: auto; }
+
+h3 {
+  color: white;
+  align-items: center;
+  padding: 3px;
+  background: #e9e9e9;
+  background: linear-gradient(90deg, #e9e9e9 0%, black 50%, #e9e9e9 100%);
+  background-size: auto; }
+
+p {
+  color: white;
+  align-items: center;
+  padding: 3px;
+  background: #e9e9e9;
+  background: linear-gradient(90deg, #e9e9e9 0%, black 50%, #e9e9e9 100%);
+  background-size: auto;
+  font-size: large; }
+
+.card-body {
+  display: flex;
+  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px; }
+
+div {
+  text-align: center; }
 
 body {
-    background: url(/assets/images/bmw-collage.jpg);
-}
+  background: url(/assets/images/bmw-collage.jpg); }
 
 @keyframes example {
-    from {
+  from {
     background-position-x: right; }
-    to {
+  to {
     background-position-x: left; } }
+
 body {
-    animation-name: example;
-    animation-delay: 0s;
-    animation-duration: 40s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate; } 
+  animation-name: example;
+  animation-delay: 0s;
+  animation-duration: 40s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate; }
+
+.divTotal {
+  color: white;
+  align-items: center;
+  padding: 3px;
+  background: #e9e9e9;
+  background: linear-gradient(90deg, #e9e9e9 0%, black 50%, #e9e9e9 100%);
+  background-size: auto; }
+
+.logo {
+  position: absolute;
+  left: 5rem;
+  top: 2rem;
+  border: 5px solid grey; }
